fix dark mode h3

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,6 +15,7 @@
   @apply dark:prose-a:text-blue-400 dark:hover:prose-a:text-white;
   @apply dark:prose-h1:text-white;
   @apply dark:prose-h2:text-white;
+  @apply dark:prose-h3:text-white;
   @apply dark:prose-pre:bg-neutral-900;
 }
 
